# kestrel

./: ARCH.md  CNAME  Cargo.toml  README.md  index.html  oranda-workspace.json  oranda.json
.github/: CODEOWNERS
.github/workflows/: rust.yml  typos.yml  web.yml
crates/metric/: Cargo.toml
crates/metric/src/: lib.rs  name.rs  value.rs
crates/serial/: Cargo.toml
crates/serial-agent/: Cargo.toml
crates/serial-agent-lib/: Cargo.toml
crates/serial-agent/wix/: main.wxs
crates/serial/src/: controller.rs  detacher.rs  error.rs  lib.rs
kestrel/: artifacts.json  changelog.rss  index.html  kestrel-installer.sh.txt  kestrel-serial-agent-installer.ps1.txt
kestrel-serial-agent/: artifacts.json  changelog.rss  index.html  kestrel-installer.ps1.txt  kestrel-serial-agent-installer.sh.txt
kestrel-serial-agent/artifacts/: index.html
kestrel-serial-agent/changelog/: index.html
kestrel-serial-agent/changelog/v0.1.0/: index.html
kestrel-serial-agent/changelog/v0.1.1/: index.html
kestrel/artifacts/: index.html
kestrel/changelog/: index.html
kestrel/changelog/v0.1.0/: index.html
kestrel/changelog/v0.1.1/: index.html
src/: app.rs  main.rs  serial.rs  serial_worker.rs  visualization.rs
src/serial/: metric.rs  packet.rs  worker.rs
src/serial/metric/: name.rs
src/serial/packet/: metric_value.rs  timestamp.rs
src/serial/worker/: controller.rs  detacher.rs  error.rs
src/visualization/: focused_metrics.rs  latest_metrics.rs  metrics_history.rs  packets_table.rs  robot.rs  sizes.rs
wix/: main.wxs
