[package]
name = "dbl-venus-visualization"
version = "0.0.0"
edition = "2021"
description = "Visualization tool for the DBL Venus Exploration project "
repository = "https://github.com/dusterthefirst/dbl-venus-visualization"

[profile.release]
lto = "fat"
overflow-checks = true
codegen-units = 1
debug = 1

[dependencies]
argh = "0.1.7"
color-eyre = "0.6.1"
colorous = "1.0.6"
eframe = { version = "0.18.0", features = ["dark-light"] }
egui_extras = "0.18.0"
git-version = "0.3.5"
once_cell = "1.12.0"
parking_lot = "0.12.1"
postcard-cobs = "0.2.0"
ringbuffer = "0.8.4"
serialport = "4.1.0"
string-interner = "0.14.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
