[package]
description = "Telemetry visualization and analysis tool for deeply embedded systems "
edition     = "2021"
name        = "kestrel"
repository  = "https://github.com/aeroteameindhoven/kestrel"
version     = "0.0.0"

[profile.release]
codegen-units   = 1
debug           = 1
lto             = "fat"
overflow-checks = true

[dependencies]
argh               = "0.1.7"
color-eyre         = "0.6.1"
colorous           = "1.0.6"
eframe             = "0.27.2"
egui_extras        = "0.27.2"
egui_plot          = "0.27.2"
git-version        = "0.3.5"
once_cell          = "1.12.0"
parking_lot        = "0.12.1"
postcard-cobs      = "0.2.0"
ringbuffer         = "0.15.0"
serialport         = "4.1.0"
string-interner    = "0.15.0"
tracing            = "0.1.34"
tracing-subscriber = "0.3.11"
