[package]
description = "Telemetry visualization and analysis tool for deeply embedded systems"
name        = "kestrel"
version     = "0.1.0"

authors.workspace      = true
edition.workspace      = true
publish.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.wix]
eula         = false
license      = false
path-guid    = "DBF0F44A-EAF8-4A21-81E3-32F51BFCA43D"
upgrade-guid = "BB0323A3-DA8D-48B8-A258-CEF7E19980CC"

[profile.release]
codegen-units   = 1
debug           = 1
lto             = "fat"
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

[dependencies]
argh               = "0.1.7"
color-eyre         = "0.6.1"
colorous           = "1.0.6"
eframe             = "0.27.2"
egui_extras        = "0.27.2"
egui_plot          = "0.27.2"
git-version        = "0.3.5"
once_cell          = "1.12.0"
parking_lot        = "0.12.1"
postcard-cobs      = "0.2.0"
ringbuffer         = "0.15.0"
serialport         = "4.1.0"
string-interner    = "0.15.0"
tracing            = "0.1.34"
tracing-subscriber = "0.3.11"

[workspace]
members = ["crates/serial-agent", "crates/serial-agent-lib"]

[workspace.package]
authors      = ["Zachary Kohnen <z.kohnen@aeroteameindhoven.nl>"]
edition      = "2021"
publish      = false
repository   = "https://github.com/aeroteameindhoven/kestrel"
rust-version = "1.77.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.dependencies.apt]
libudev-dev = "*"
