[package]
name = "kestrel-metric"

authors.workspace      = true
edition.workspace      = true
publish.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
egui            = { version = "0.27.2", optional = true }
emath           = { version = "0.27.2", optional = true }
epaint          = { version = "0.27.2", optional = true }
once_cell       = "1.19.0"
parking_lot     = "0.12.1"
string-interner = "0.15.0"

[features]
egui = ["dep:egui", "dep:emath", "dep:epaint"]
